--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>p5.js example</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="./lib/p5.js"></script>
+    <script src="./src/clock.js"></script>
     <script src="./src/sketch.js"></script>
   </head>
   <body>
